TEST PROBLEMS.txt
Loaded package environment from /root/.ghc/x86_64-linux-8.8.4/environments/default

source/Grader.hs:67:60: error:
    • Couldn't match expected type ‘Char’ with actual type ‘[Char]’
    • In the expression: "k"
      In the second argument of ‘(==)’, namely ‘["k", "z"]’
      In the second argument of ‘($)’, namely
        ‘pre "bt" dict1_ == ["k", "z"]’
   |
67 |           Q "pre" 10 [R "" 10 $ test $ pre "bt" dict1_ == ["k", "z"]],
   |                                                            ^^^

source/Grader.hs:67:65: error:
    • Couldn't match expected type ‘Char’ with actual type ‘[Char]’
    • In the expression: "z"
      In the second argument of ‘(==)’, namely ‘["k", "z"]’
      In the second argument of ‘($)’, namely
        ‘pre "bt" dict1_ == ["k", "z"]’
   |
67 |           Q "pre" 10 [R "" 10 $ test $ pre "bt" dict1_ == ["k", "z"]],
   |  